--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -9,23 +9,23 @@
   <title>Homepage - Techium</title>
 </head>
 <body>
-  <br><!-- Header -->
+  <!-- Header -->
   <header>
     <div>
       <span>Techium</span>
       <nav></nav>
     </div>
   </header>
-  <br><!-- Main -->
+  <!-- Main -->
   <main>
     <h1>Homepage</h1>
-    <br><!-- Hero Section -->
+    <!-- Hero Section -->
     <section>
       <div>
         <h2>We help you build your brand!</h2>
       </div>
     </section>
-    <br><!-- Services Section -->
+    <!-- Services Section -->
     <section>
       <div>
         <header>
@@ -42,7 +42,7 @@
         </div>
       </div>
     </section>
-    <br><!-- Works Section -->
+    <!-- Works Section -->
     <section>
       <div>
         <header>
@@ -62,7 +62,7 @@
         </div>
       </div>
     </section>
-    <br><!-- About Us Section -->
+    <!-- About Us Section -->
     <section>
       <div>
         <header>
@@ -79,7 +79,7 @@
         </div>
       </div>
     </section>
-    <br><!-- Latest News Section-->
+    <!-- Latest News Section-->
     <section>
       <div>
         <header>
@@ -104,7 +104,7 @@
         </div>
       </div>
     </section>
-    <br><!-- Testimonials section -->
+    <!-- Testimonials section -->
     <section>
       <div>
         <header>
@@ -118,7 +118,7 @@
         </div>
       </div>
     </section>
-    <br><!-- Contact Section -->
+    <!-- Contact Section -->
     <section>
       <div>
         <header>
@@ -131,7 +131,7 @@
       </div>
     </section>
   </main>
-  <br><!-- Footer -->
+  <!-- Footer -->
   <footer>
     <div>Footer</div>
   </footer>
